--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "shortid": "^2.2.15",
     "simpl-schema": "^1.7.2"
   },
+  "engines": {
+    "node": "v12.16.1"
+  },
   "meteor": {
     "mainModule": {
       "client": "client/main.js",
